--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" defer></script>
-  <title>Library</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
+    <title>Library</title>
+  </head>
+  <body>
+    <nav>
+      <img class="nav__logo" src="../res/logo.png" alt="Site Logo">
+      <div class="nav__links">
+        <a href="#">Home</a>
+        <a href="#">Read List</a>
+        <a href="#">Profile</a>
+      </div>
+      <button class="nav__btn--add-book">Add Book</button>
+    </nav>
+
+    <main>
+
+    </main>
+
+    <!-- <footer>
+      <a href="https://www.vecteezy.com/free-vector/book-logo">Book Logo Vectors by Vecteezy</a>
+    </footer> -->
+  </body>
 </html>
