feat: finalize navbar design

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
         <a href="#">Read List</a>
         <a href="#">Profile</a>
       </div>
-      <button class="nav__btn--add-book">Add Book</button>
+      <button class="nav__btn--add-book">New Book</button>
     </nav>
 
     <main>
-
+      
     </main>
 
     <!-- <footer>
