feat: add card hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,18 @@
     </nav>
 
     <main>
-      
+      <div class="main__card card--book">
+        <p class="card--book__title">Eloquent JavaScript, 3rd Edition</p>
+        <p class="card--book__author">by Marijn Haverbeke</p>
+        <p class="card--book__pages">996 pages</p>
+        <img class="card--book__have-read-check" src="../res/check.svg" alt="Read Status">
+      </div>
+      <div class="main__card card--book">
+        <p class="card--book__title">Eloquent JavaScript, 3rd Edition</p>
+        <p class="card--book__author">by Marijn Haverbeke</p>
+        <p class="card--book__pages">996 pages</p>
+        <img class="card--book__have-read-check" src="../res/check.svg" alt="Read Status">
+      </div>
     </main>
 
     <!-- <footer>
