feat: add check mark logic

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
         <p class="card--book__title">Eloquent JavaScript, 3rd Edition</p>
         <p class="card--book__author">by Marijn Haverbeke</p>
         <p class="card--book__pages">996 pages</p>
-        <img class="card--book__have-read-check" src="../res/check.svg" alt="Read Status">
+        <svg class="card--book__have-read-check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z" /></svg>
       </div>
       <div class="main__card card--book">
         <p class="card--book__title">Eloquent JavaScript, 3rd Edition</p>
         <p class="card--book__author">by Marijn Haverbeke</p>
         <p class="card--book__pages">996 pages</p>
-        <img class="card--book__have-read-check" src="../res/check.svg" alt="Read Status">
+        <svg class="card--book__have-read-check" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0.41,13.41L6,19L7.41,17.58L1.83,12M22.24,5.58L11.66,16.17L7.5,12L6.07,13.41L11.66,19L23.66,7M18,7L16.59,5.58L10.24,11.93L11.66,13.34L18,7Z" /></svg>
       </div>
     </main>
 
