fix: change New Book button type

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <a href="#">Read List</a>
         <a href="#">Profile</a>
       </div>
-      <button class="nav__btn--add-book">New Book</button>
+      <button class="nav__btn--add-book" type="button">New Book</button>
     </nav>
 
     <main>
