feat: add logic for add book blur

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <a href="#">Read List</a>
         <a href="#">Profile</a>
       </div>
-      <button class="nav__btn--add-book" type="button">New Book</button>
+      <button class="nav__btn--add-book" type="button">Add Book</button>
     </nav>
 
     <main>
@@ -34,8 +34,11 @@
       </div>
     </main>
 
-    <!-- <footer>
+    <form class="off">
+      <input type="text" name="title" id="title">
+    </form>
+    <!-- Attribution
       <a href="https://www.vecteezy.com/free-vector/book-logo">Book Logo Vectors by Vecteezy</a>
-    </footer> -->
+     -->
   </body>
 </html>
