--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,15 @@
     </main>
 
     <form class="off">
+      
+      <label for="title">Title of Book: </label>
       <input type="text" name="title" id="title">
+      <label for="author">Author: </label>
+      <input type="text" name="author" id="author">
+      <label for="pages">Number of Pages: </label>
+      <input type="text" name="pages" id="pages">
+      <label for="read">Have you read the book already?</label>
+      <input type="checkbox" name="read" id="read">
     </form>
     <!-- Attribution
       <a href="https://www.vecteezy.com/free-vector/book-logo">Book Logo Vectors by Vecteezy</a>
