--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <div class="form__last-row">
         <label for="read">Have you read the book already?</label>
         <input type="checkbox" name="read" id="read">
-        <button class="form__btn--submit" type="button">Add</button>
+        <button class="form__btn--submit" type="submit">Add</button>
       </div>
     </form>
     <!-- Attribution
