--- a/src/index.html
+++ b/src/index.html
@@ -39,14 +39,14 @@
     <form class="off">
       <img class="form__btn--close" src="../res/close.svg" alt="Close Button">
       <label for="title">Title of Book: </label>
-      <input type="text" name="title" id="title">
+      <input type="text" name="title" id="title" required>
       <label for="author">Author: </label>
-      <input type="text" name="author" id="author">
+      <input type="text" name="author" id="author" required>
       <label for="pages">Number of Pages: </label>
-      <input type="text" name="pages" id="pages">
+      <input type="text" name="pages" id="pages" required>
       <div class="form__last-row">
         <label for="read">Have you read the book already?</label>
-        <input type="checkbox" name="read" id="read">
+        <input type="checkbox" name="read" id="read" required>
         <button class="form__btn--submit" type="submit">Add</button>
       </div>
     </form>
