fix: set  pages input field to only accept numbers using RegExp

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       <label for="author">Author: </label>
       <input type="text" name="author" id="author" required>
       <label for="pages">Number of Pages: </label>
-      <input type="text" name="pages" id="pages" required>
+      <input type="text" pattern="[0-9]+" name="pages" id="pages" required>
       <div class="form__last-row">
         <label for="read">Have you read the book already?</label>
         <input type="checkbox" name="read" id="read" required>
