--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       <input type="text" pattern="[0-9]+" name="pages" id="pages" required>
       <div class="form__last-row">
         <label for="read">Have you read the book already?</label>
-        <input type="checkbox" name="read" id="read" required>
+        <input type="checkbox" name="read" id="read">
         <button class="form__btn--submit" type="submit">Add</button>
       </div>
     </form>
