feat: move files for prod deployment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav>
-      <img class="nav__logo" src="../res/logo.png" alt="Site Logo">
+      <img class="nav__logo" src="./res/logo.png" alt="Site Logo">
       <div class="nav__links">
         <a href="#">Home</a>
         <a href="#">Read List</a>
@@ -24,7 +24,7 @@
     </main>
 
     <form class="off">
-      <img class="form__btn--close" src="../res/close.svg" alt="Close Button">
+      <img class="form__btn--close" src="./res/close.svg" alt="Close Button">
       <label for="title">Title of Book: </label>
       <input type="text" name="title" id="title" required>
       <label for="author">Author: </label>
